// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertLink renders 1`] = `
<Component
  className="css-ryqtzi-AlertLink css-1k2xcw02"
  to="/settings/accounts/notifications"
>
  This is an external link button
</Component>
`;

exports[`AlertLink renders with icon 1`] = `
<Component
  className="css-ryqtzi-AlertLink css-1k2xcw02"
  icon="icon-mail"
  to="/settings/accounts/notifications"
>
  This is an external link button
</Component>
`;
